--- a/Libro.tex
+++ b/Libro.tex
@@ -2833,6 +2833,8 @@ Potremmo pensare che le nostre mani “sembrano quelle di un vecchio” oppure d
 
 In uno studio, è stato chiesto a dalle persone di scattare foto di attività quotidiane piacevoli e di riflettere sulle emozioni positive provate; ciò ha portato a un aumento dell'effetto positivo nel gruppo di trattamento rispetto ai controlli\endnote{\raggedright\url{https://bmcpsychology.biomedcentral.com/articles/10.1186/s40359-023-01225-z}}. La riformulazione cognitiva è una strategia che consiste nel reinterpretare una situazione in modo da modificarne l’impatto emotivo. In questo modo, anche eventi stressanti o negativi possono essere visti sotto una luce più costruttiva.
 
+Possiamo anche utilizzando carta e penna interpretare la nostra vita come un viaggio eroico, dove ogni sfida e cambiamento contribuiscono a un percorso di crescita personale. Come un eroe che lascia il conosciuto per affrontare l’ignoto, anche noi affrontiamo nuove esperienze e difficoltà con l’aiuto di familiari e amici, nostri alleati preziosi. Le sfide, lasciano un contributo che dà significato alla nostra storia e rende ogni giorno un capitolo importante del nostro racconto personale.
+
 Sadhguru consiglia di passare 5 minuti al giorno verso qualcosa che per noi non ha alcun valore, come un albero, un
 insetto, un sasso, per notare che si può provare amore anche per lui. L'amore non è una reazione a qualcosa di esterno,
 ma un modo di guardare il mondo.
@@ -2883,27 +2885,18 @@ Dobbiamo fare attenzione però a non confondere i desideri coi bisogni. Prendiam
 Individuiamo un evento che ci procura malessere: “Il mio partner non mi telefona mai”. Ora individuiamo il significato che diamo a questo episodio: “se non mi chiama significa che non mi ama”. Ora troviamo altri cinque significati che può avere questo evento, come ad esempio: “forse ora è impegnato/a”.
 Altrimenti se un nostro collega cura molto i dettagli penseremo che è puntiglioso e, se lo facessimo noi diremmo che  gli altri sono approssimativi. 
 
-
-
-
- 
-
 Quante volte abbiamo pensato a quali sono i nostri valori?
-Sappiamo rispondere davvero a questa domanda? O ci ritroveremo a dire la famiglia, il lavoro,
-l'amicizia, l'onestà, tutte cose giuste, ma un po' troppo generiche e impersonali, infatti difficilmente troverete qualcuno che prenderebbe le distanze da questi esempi.
+Sappiamo rispondere a questa domanda? O ci ritroveremo a dire la famiglia, il lavoro, l'amicizia, l'onestà, tutte cose giuste, ma un po' troppo generiche e impersonali, infatti difficilmente troverete qualcuno che prenderebbe le distanze da questi esempi.
 
 Un modo che potrebbe aiutare questa scoperta è guardare le nostre azioni. Il nostro pensiero è soggetto al nostro
 dialogo interiore e può essere molto deformato, le nostre azioni invece possono offrirci alcuni spunti più genuini.
-Possiamo dire di essere ambientalisti e poi andare in giro con un SUV che inquina molto. Possiamo
-dire che i social network non vanno usati e poi non resistere dal guardare le notifiche sullo smartphone durante una
-cena. Quando ci innamoriamo, non succede perché abbiamo fatto
+Possiamo dire di essere ambientalisti e poi andare in giro con un SUV che inquina molto. Quando ci innamoriamo, non succede perché abbiamo fatto
 un'attenta valutazione da ritenere che i caratteri estetici, caratteriali e culturali di una persona siano
 adeguati al provare certi sentimenti e ad intraprendere una certa relazione. Ci innamoriamo e basta, senza un nostro
 controllo o ragionamento. Però questo può dirci qualcosa di noi. Non abbiamo scelto di innamorarci di quella persona,
-però è successo, quindi questo può dirci qualcosa di noi stessi. Può dirci che siamo attratti da certe caratteristiche, fisiche o caratteriali.
-Stesso discorso per le passioni. Il fatto che noi ci siamo appassionati del ballo, dirà qualcosa di noi stessi. Se ci appassioniamo di golf, ci dirà qualcos'altro e così via. 
+però è successo e, questo, può dirci qualcosa di noi stessi, come l'essere attratti da certe caratteristiche caratteriali.
 
-Per capire meglio i nostri valori possiamo anche porci alcune domande:
+Per capire meglio i nostri valori possiamo farci alcune domande:
 
 \begin{itemize}
 \item Se, qualsiasi cosa tu decida di fare, le persone ti ammirassero, cosa vorresti fare nella tua vita?
@@ -2915,42 +2908,36 @@ Per capire meglio i nostri valori possiamo anche porci alcune domande:
 \item Se rimanessi intrappolato sotto le macerie di un edificio e ti rimanessero pochi minuti di vita, chi chiameresti al telefono e cosa diresti? 
 \end{itemize}
 
-Queste domande potrebbero mostrarti che tu vuoi essere ricordato come “curioso”, “amante della libertà”, “coraggioso” ecc… 
-Prendi nota di almeno due o tre valori che emergono dalla descrizione, quelli che ti piacciono di più,
-scegli quelli che ti sembrano risuonare maggiormente in quel momento, senza pensarci troppo. Nel corso dei prossimi giorni
-prendi uno dei valori scelti e, scrivi per dieci minuti un piccolo tema su quel valore, evita di preoccuparti, nessuno
-lo leggerà o lo correggerà. Scrivi a ruota libera su ciò che pensi, senti e immagini di quel valore. Fai questo
-esercizio per tutti i valori, anche in giorni diversi, ci aiuterà a chiarire i nostri valori e aiutarci a capire se
-stiamo perseguendo quello sbagliato per riuscire a individuare la strada da prendere. Anche qua ritorna la via di
-mezzo: se il nostro valore è la forma fisica e sabato sera ci invitano a mangiare una pizza, potremmo decidere di
-rinunciare, proprio per seguire i nostri principi. Così facendo però, i nostri valori diventano dei limiti, a dei
-nostri altri bisogni, come la socialità.
+Queste domande potrebbero mostrarti che tu vuoi essere visto come “curioso”, “amante della libertà”, “coraggioso” ecc… 
 
 \begin{mdframed}[linewidth=1pt]
 Meglio una vita con o senza scopo?
 
-Sembra che sia meglio vivere una vita con scopo. Però non deve essere necessariamente qualcosa come salvare il mondo, può essere qualsiasi cosa, anche piccola, ma che per noi è importante. La questione dello scopo nella vita è un tema profondamente complesso e dibattuto sia in filosofia che in psicologia. Le diverse prospettive offrono visioni interessanti su come interpretare e affrontare l'esistenza umana. 
-Filosofie come il taoismo e il buddismo enfatizzano l'importanza di accettare la vita così com'è, senza cercare di imporsi uno scopo rigido. L'idea è che la pace e il benessere derivino dal fluire con la vita, accettando l'impermanenza e non cercando di forzare le cose. Questo approccio può aiutare a vivere in modo più rilassato e sereno, evitando l'ansia derivante dal non raggiungere un obiettivo specifico.
-Affrontare ogni cosa, come se l'avessimo scelta.
+Sembra che sia meglio vivere una vita con scopo. Però non deve essere necessariamente qualcosa come salvare il mondo, può essere qualsiasi cosa, anche piccola, ma che per noi è importante. Filosofie come il taoismo e il buddismo enfatizzano l'importanza di accettare la vita così com'è, senza cercare di imporsi uno scopo rigido. L'idea è che la pace e il benessere derivino dal fluire con la vita, accettando l'impermanenza e non cercando di forzare le cose. Questo approccio può aiutare a vivere in modo più rilassato e sereno, evitando l'ansia derivante dal non raggiungere un obiettivo specifico.
 
 Il destino guida chi lo accetta, e trascina chi è riluttante – Seneca
 
 sopporta e astieniti – Epitteto (Sopporta il mondo esterno e astieniti dal farti dominare dalle passioni interne e metterlo in mostra lamentandoti)
 
-Molte correnti della psicologia moderna, come la psicologia positiva, suggeriscono che avere uno scopo e obiettivi chiari nella vita possono dare un senso di direzione, motivazione e soddisfazione. Avere uno scopo può aiutare a superare le difficoltà, creare un senso di appartenenza e migliorare la salute mentale. Viktor Frankl, con il suo libro "Uno psicologo nei lager", ha sostenuto che la ricerca di significato è essenziale per la sopravvivenza e il benessere umano, soprattutto nei momenti più difficili.
+Molte correnti della psicologia moderna, come la psicologia positiva, suggeriscono che avere uno scopo e obiettivi chiari nella vita possono dare un senso di direzione, motivazione e soddisfazione. Avere uno scopo può aiutare a superare le difficoltà, creare un senso di appartenenza e migliorare la salute mentale.
 
-Non dovremmo rifuggire o essere spaventati da una vita ordinaria e all'interno di essa trovare quindi il nostro scopo. Alcuni esercizi propongono di cambiare il nostro punto di vista e la narrazione che ne diamo. Possiamo anche utilizzando carta e penna interpretare la nostra vita come un viaggio eroico, dove ogni sfida e cambiamento contribuiscono a un percorso di crescita personale. Come un eroe che lascia il conosciuto per affrontare l’ignoto, anche noi affrontiamo nuove esperienze e difficoltà con l’aiuto di familiari e amici, nostri alleati preziosi. Le sfide, spesso interiori, richiedono coraggio e forza, ma superarle ci trasforma, rendendoci più forti e consapevoli. Infine, ogni obiettivo raggiunto lascia un’eredità: un segno nelle vite degli altri, un contributo che dà significato alla nostra storia e rende ogni giorno un capitolo importante del nostro racconto personale.
+La ricerca scientifica ha osservato che avere uno scopo nella vita è strettamente legato a benefici per la salute fisica e psicologica. Studi come il progetto MIDUS (Midlife in the United States) e meta-analisi evidenziano che le persone con un forte senso di scopo tendono a vivere più a lungo e mostrano una maggiore resilienza emotiva e regolazione delle emozioni, affrontando meglio stress e difficoltà\endnote{\raggedright\url{https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0080329}} \endnote{\raggedright\url{https://centerhealthyminds.org/join-the-movement/purpose-in-life-and-a-long-term-view-on-well-being}}. 
 
-La ricerca scientifica ha osservato che avere uno scopo nella vita è strettamente legato a benefici per la salute fisica e psicologica. Studi come il progetto MIDUS (Midlife in the United States) e meta-analisi evidenziano che le persone con un forte senso di scopo tendono a vivere più a lungo e mostrano una maggiore resilienza emotiva, affrontando meglio stress e difficoltà. Questo orientamento verso un obiettivo può ridurre il rischio di depressione e migliora la regolazione delle emozioni, agendo come fattore protettivo contro disturbi dell’umore. Alcuni studi neuroimaging osservano che un forte senso di scopo è associato a una minore reattività dell’amigdala a stimoli negativi e a una regolazione più efficiente grazie all’interazione con la corteccia prefrontale, suggerendo possibili meccanismi di recupero emotivo \endnote{\raggedright\url{https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0080329}} \endnote{\raggedright\url{https://centerhealthyminds.org/join-the-movement/purpose-in-life-and-a-long-term-view-on-well-being}}. Tuttavia, alcune prospettive sottolineano anche i benefici delle attività "senza scopo" o prive di obiettivi precisi. Queste attività, come il gioco, la spontaneità e l’espressione creativa, possono promuovere un senso di benessere e libertà interiore. Studi suggeriscono che dedicarsi ad attività come passeggiare senza meta o suonare uno strumento senza la ricerca della perfezione permette di rilassarsi, esprimersi liberamente e alleviare le tensioni. Sebbene uno scopo nella vita possa favorire la longevità e la resilienza, anche momenti di spontaneità e attività non finalizzate contribuiscono significativamente al benessere psicologico e fisico, offrendo pause rigeneranti dalla pressione degli obiettivi quotidiani.
+Tuttavia, alcune prospettive sottolineano anche i benefici delle attività "senza scopo" o prive di obiettivi precisi. Queste attività, come il gioco, la spontaneità e l’espressione creativa, possono promuovere un senso di benessere e libertà interiore. Studi suggeriscono che dedicarsi ad attività come passeggiare senza meta o suonare uno strumento senza la ricerca della perfezione permette di rilassarsi, esprimersi e, alleviare le tensioni.
 
-Luca Mazzucchelli dice che se ti stressa ti interessa. Le feste di compleanno dei figlio lo stressano e non lo rendono particolarmente felice, ma per lui è importante rendere felici i suoi bambini. Non si tratta di sconfiggere lo stress, ma dandogli un significato lo si può affrontare meglio, lo si comprende e lo si accetta. Se si ha ansia di parlare in pubblico, non è consigliabile cercare di superare questo ostacolo soltanto di sforzo, ma trovando un valore, una motivazione per fare ciò che si vorrebbe fare. Se ci neghiamo a noi stessi questi lati possono svilupparsi inconsapevolmente fuori dai nostri desideri.
+Risulta quindi importante trovare un equilibrio. In fondo, forse lo scopo non deve essere una ricerca ossessiva, ma un qualcosa che emerge spontaneamente dal nostro vivere quotidiano, dalle nostre relazioni e dalle nostre esperienze. Parte del nostro scopo, dipende anche dall'impatto che abbiamo sugli altri. Già ora la nostra vita ha un impatto sugli altri. La ricerca di scopo non deve essere necessariamente nel fare qualcosa di nuovo, ma cercare l'impatto che ha già ora sugli altri. Anche se facciamo un lavoro umile, immaginiamo come sarebbe il mondo se non ci fossimo\endnote{\raggedright\url{https://www.youtube.com/watch?v=aF2MdZjS-0M}}.
 
-Personalmente, credo che entrambe le visioni abbiano valore. Trovare uno scopo nella vita può dare energia e direzione, ma è altrettanto importante non farsi sopraffare dall'idea di dover necessariamente avere uno scopo "grande" o ben definito. Potrebbe esserci una via di mezzo: accettare la vita con apertura e adattabilità, ma anche essere in grado di riconoscere e coltivare ciò che ci appassiona e ci dà un senso di significato. In fondo, forse lo scopo non deve essere una ricerca ossessiva, ma un qualcosa che emerge spontaneamente dal nostro vivere quotidiano, dalle nostre relazioni e dalle nostre esperienze. Parte del nostro scopo, dipende anche dall'impatto che abbiamo sugli altri. Già ora la nostra vita ha un impatto sugli altri. Quindi la ricerca di scopo non deve essere necessariamente nel fare qualcosa di nuovo, ma cercare l'impatto che ha sugli altri, quello che già facciamo. Anche lavori umili come lo spazzino, il contadino, il lavapiatti, il manovale ecc… immaginate come sarebbe il mondo se non ci fossero\endnote{\raggedright\url{https://www.youtube.com/watch?v=aF2MdZjS-0M}}.
+
+
+
 
 Meglio vivere con un obiettivo o un valore?
 Un obiettivo è legato al tempo, una volta raggiunto possiamo eliminarlo dalla nostra lista delle cose da fare e passare ad altro. I nostri valori, invece, sono come una bussola. Gli obiettivi vengono generati dai nostri valori.
 
 Se l'obiettivo è avere tanti soldi, allora ne vorremo sempre di più. Se il valore è la libertà personale, allora avremmo bisogno solo di quei soldi per fare ciò che ci piace. Se l'obiettivo è viaggiare, trangugeremo ogni esperienza. Se il valore è la scoperta, potremmo scoprire che non conoscevamo la provincia in cui viviamo.
+
+
+Luca Mazzucchelli dice che se ti stressa ti interessa. Le feste di compleanno dei figlio lo stressano e non lo rendono particolarmente felice, ma per lui è importante rendere felici i suoi bambini. Non si tratta di sconfiggere lo stress, ma dandogli un significato lo si può affrontare meglio, lo si comprende e lo si accetta. Se si ha ansia di parlare in pubblico, non è consigliabile cercare di superare questo ostacolo soltanto di sforzo, ma trovando un valore, una motivazione per fare ciò che si vorrebbe fare. Se ci neghiamo a noi stessi questi lati possono svilupparsi inconsapevolmente fuori dai nostri desideri.
 \end{mdframed}
 
 Se pensiamo al lavoro, non è realistico credere che ci
