--- a/Libro.tex
+++ b/Libro.tex
@@ -3323,104 +3323,34 @@ Dovremmo quindi evitare i litigi? Si, ma non le discussioni.
 \begin{mdframed}[linewidth=1pt]
 Se ti arrabbi è perché sei colpevole
 
-Le persone tendono spesso a interpretare una reazione rabbiosa a un'accusa come prova di colpevolezza. Secondo uno studio del team di DeCelles (Università di Toronto), chi è innocente tende a reagire con più rabbia a un'accusa ingiusta. Tuttavia, reagire con calma non garantisce innocenza né è necessariamente un indicatore affidabile. I ricercatori hanno condotto alcuni giochi di ruolo e
-tra i partecipanti c'erano anche dei poliziotti. Gli studi sperimentali condotti in contesti simulati (anche con partecipazione di agenti e altri professionisti) mostrano che gli osservatori tendono a interpretare come colpevoli le persone che reagiscono con rabbia — anche se spesso sono innocenti secondo le evidenze dello studio. 
+Le persone tendono spesso a interpretare una reazione rabbiosa a un'accusa come prova di colpevolezza. Secondo uno studio del team di DeCelles (Università di Toronto), chi è innocente tende a reagire con più rabbia a un'accusa ingiusta. Tuttavia, reagire con calma non garantisce innocenza né è necessariamente un indicatore affidabile.
 
-Attenzione alle giustificazioni. Spiegarsi va bene quel tanto che basta, ma se tendiamo continuamente a giustificarci, ad un certo livello ci dimostreremo fragili o debole, perché implicitamente stiamo creando dei ruoli dove l'altro può porsi a giudice, o comunque la persona a cui dare spiegazioni e, noi come sottoposti. 
-Difendersi eccessivamente ci pone nel ruolo di "giustificatore", elevando l'altra persona a "giudice" e implicando la sua superiorità. 
+Attenzione alle giustificazioni. Spiegarsi va bene quel tanto che basta, ma se tendiamo continuamente a giustificarci, ad un certo livello ci dimostreremo colpevoli, perché implicitamente stiamo creando dei ruoli dove l'altro può porsi a giudice, o comunque la persona a cui dare spiegazioni e, noi come sottoposti. 
 Nelle relazioni quando teniamo fermamente una posizione, invitiamo il nostro interlocutore alla posizione complementare. 
-Se io faccio la vittima potrei indurre il mio interlocutore a fare il carnefice. E viceversa.
-Se uno dice che siamo stupidi, più ci giustifichiamo eccessivamente e più dimostriamo di avere paura che il nostro interlocutore abbia ragione.
-Usa la tecnica delle "buone intenzioni": Cerca una possibile intenzione positiva dietro l'attacco dell'altra persona, anche se non ci credi. Il nostro interlocutore si troverà spiazzato e la dinamica relazionale muterà.
-La vera forza risiede nel comunicare senza il bisogno di difendersi, dimostrando sicurezza del proprio valore\endnote{\raggedright\url{http://www.youtube.com/watch?v=tib49miBBww}}.
+Se faccio la vittima potrei indurre il mio interlocutore a fare il carnefice. E viceversa.
+Se uno dice che siamo stupidi, più ci giustifichiamo eccessivamente e più dimostriamo di avere paura che il nostro interlocutore abbia ragione\endnote{\raggedright\url{http://www.youtube.com/watch?v=tib49miBBww}}.
 \end{mdframed}
 
-Di seguito alcuni consigli\endnote{\raggedright\url{https://theconversation.com/how-to-be-more-persuasive-according-to-science-87196}}:
-
-\begin{itemize}
-\item Offri qualcosa per primo: Tendiamo a sentirci in debito con una persona che ci offre qualcosa, che può essere un
-aiuto, un oggetto, una confidenza, ma anche valorizzare i punti buoni di un idea, di un ragionamento, o comprenderlo,
-mostrare stima, apprezzamento. In questo modo il nostro interlocutore si sentirà accettato e considerato, invece che
-sfidato e, sarà più disposto a rivedere le sue posizioni.
-\item ripetere spesso il nome dell'interlocutore\endnote{\raggedright\url{http://www.tandfonline.com/doi/abs/10.1080/03637758409390188}
-}.
-\item imitare la sua posizione corporea, postura, gesti, espressioni, linguaggio, riprendendo le stesse parole (senza
-esagerare), evitando però di sembrare dei professori\endnote{\raggedright\url{http://psycnet.apa.org/record/1999-05479-002}}.
-\item guardarlo spesso negli occhi\endnote{\raggedright\url{http://psycnet.apa.org/record/1986-27160-001}}, ma senza fissarlo insistentemente.
-\item Chiedi anche qualcosa che non ti interessa: Questa tecnica, nota come 'porta in faccia', può rendere più probabile che l'interlocutore accetti una successiva richiesta più modesta. Alcuni studi suggeriscono che questo può indurre un senso di reciprocità o di necessità di compromesso.
-\item Discutete di persona: Il confronto diretto può spesso favorire un dialogo più costruttivo rispetto agli scambi online. Le piattaforme digitali, pur offrendo opportunità di connessione, possono talvolta facilitare toni meno civili e rendere più difficile per gli individui rivedere pubblicamente le proprie posizioni, data la natura persistente dei contenuti.
-\item Usa un cronometro: Se il vostro interlocutore parla prima che abbiate finito, usate un cronometro, impostato a 2
-minuti con la regola ferrea che in questo lasso di tempo non si può essere interrotti.
-\item Gratifica: Prima di esporre critiche, stimolate l'autostima dell'altro, valorizzando i punti buoni dei suoi
-ragionamenti. Se una persona si sente accettata, sarà più propensa a rivedere le sue posizioni.
-\item Esempi: Usate esempi tratti dall'esperienza dell'interlocutore, come dimostrazione delle criticità della sua
-teoria, piuttosto che la spiegazione di teorie complesse.
-\item Mettersi in discussione: Quando qualcuno è particolarmente resistente, occorre chiedersi: non è che per caso siamo
-noi, con il nostro tentativo di fargli cambiare idea, gli artefici del suo irrigidimento?
-\end{itemize}
-
 \subsubsection{Argomentazione}
-Perché è importante argomentare quando si parla? Perché l'alternativa sarebbe il: è così e
-basta, fidati, te lo dico io, per me è così. Ovviamente non si può argomentare tutto, a volte non è nemmeno necessario
-sviscerare dei presupposti che sono già chiari per entrambi o quando la complessità tecnica diventa troppo alta da
-portare fuoristrada il discorso. Se non si argomenta la propria posizione potrebbero sorgere due effetti
-controproducenti principali.
+Perché è importante argomentare quando si parla? Perché l'alternativa sarebbe il: è così e basta, fidati, te lo dico io, per me è così. 
 
-Il primo è che forse non abbiamo ancora affrontato abbastanza con gli altri o con noi stessi, nel nostro dialogo
-interiore questo argomento. Questa fase è molto importante perché abbiamo modo di rivedere, rimettere in discussione le
-nostre credenze quando non abbiamo una risposta o quando le nostre argomentazioni non sono più così solide se poste
-davanti a una nuova prospettiva. 
+Alcuni ricercatori hanno osservato che riconoscere i propri errori non riduce la nostra competenza agli occhi degli altri\endnote{Adam K. Fetterman, Kai Sassenberg, «The Reputational Consequences of Failed Replications and Wrongness Admission Among Scientists», PLoS ONE 10, 2015, e0143723}. Al contrario, mostra sincerità e desiderio di migliorarsi\endnote{Adam K. Fetterman et al., «On the Willingness to Admit Wrongness: Validation of a New Measure and an Exploration of Its Correlates», Personality and Individual Differences, 138, 2019, pp. 193-202}. Altri studi osservano che, nelle aule di tribunale, periti e giurati risultano più credibili e convincenti quando esprimono una sicurezza moderata, piuttosto che bassa o eccessiva\endnote{Robert J. Cramer, Stanley L. Brodsky, Jamie DeCoster, «Expert Witness Confidence and Juror Personality: Their Impact on Credibility and Persuasion in the Courtroom», Journal of the American Academy of Psychiatry and Law, 37, 2009, pp. 63-74; Harvey London, Dennis McSeveney, Richard Tropper, «Confidence, Overconfidence and Persuasion», Human Relations, 24, 1971, pp. 359-369} \endnote{Mike Allen, «Meta-analysis Comparing the Persuasiveness of One-Sided and Two-Sided Messages», Western Journal of Speech Communication, 55, 1991, pp. 390-404}.
 
-Non hai veramente capito qualcosa fino a quando non sei in grado di spiegarlo a tua nonna (Albert Einstein).
+Se vediamo che non c'è nessuna possibilità di comunicare con una persona è meglio non insistere. Argomentare richiede molta
+energia, sia dal punto di vista emotivo e mentale, mentre senza di essa ci vuole un secondo, non servono prove, logica, ragionamenti ecc… Quando non ci sono più i presupposti per continuare, come educazione, rispetto del tempo e le energie della persona, quello che resta è solo la frustrazione e la delusione. 
 
-L'altro problema, più pericoloso sorge quando, messi alle strette e, non abbiamo una risposta,
-diventiamo evasivi o aggressivi e ci rifugiamo in frasi come, fidati, te lo dico io ecc… Può succedere, un po' per orgoglio, un po'
-perché nella società in cui viviamo dobbiamo essere sempre al massimo, sapere sempre tutto, essere sempre sul pezzo,
-sempre attivi e un po' perché, se l'argomento è a noi caro, lo sentiamo molto nostro, potremmo
-identificarci, diventando difficile metterlo in discussione. La vera sfida è riconoscere quando succede, quando siamo
-evasivi e, con umiltà e mente aperta, prendersi del tempo per mettersi in discussione, senza vergognarsi e ammettere di
-aver sbagliato. 
-
-Le persone si identificano con le idee e le difendono a spada tratta, perché stanno difendendo loro stessi. Nelle discussioni infatti capita spesso di vedere attaccate le altre persone invece che essere critici verso le loro idee.
-
-Gli psicologi osservano che riconoscere i propri errori non riduce la nostra competenza agli occhi degli altri\endnote{Adam K. Fetterman, Kai Sassenberg, «The Reputational Consequences of Failed Replications and Wrongness Admission Among Scientists», PLoS ONE 10, 2015, e0143723}. Al contrario, mostra sincerità e desiderio di migliorarsi\endnote{Adam K. Fetterman et al., «On the Willingness to Admit Wrongness: Validation of a New Measure and an Exploration of Its Correlates», Personality and Individual Differences, 138, 2019, pp. 193-202}. Inoltre, altri studi osservano che, nelle aule di tribunale, periti e giurati risultano più credibili e convincenti quando esprimono una sicurezza moderata, piuttosto che bassa o eccessiva\endnote{Robert J. Cramer, Stanley L. Brodsky, Jamie DeCoster, «Expert Witness Confidence and Juror Personality: Their Impact on Credibility and Persuasion in the Courtroom», Journal of the American Academy of Psychiatry and Law, 37, 2009, pp. 63-74; Harvey London, Dennis McSeveney, Richard Tropper, «Confidence, Overconfidence and Persuasion», Human Relations, 24, 1971, pp. 359-369} \endnote{Mike Allen, «Meta-analysis Comparing the Persuasiveness of One-Sided and Two-Sided Messages», Western Journal of Speech Communication, 55, 1991, pp. 390-404}.
-Non argomentare la propria posizione è un limite per la propria crescita personale, ma anche al fine del
-dialogo e del rapporto. Non possiamo pretendere che il nostro interlocutore prenda per vero quello che diciamo solo perché è uscito
-dalla nostra bocca. Anche se stiamo parlando con un profano, di una materia in cui non è molto competente, dobbiamo
-offrire qualcosa di credibile al nostro interlocutore. Dobbiamo persuaderlo delle nostre argomentazioni. Sempre con
-l'amor proprio e il rispetto per se stessi, se vediamo che non c'è nessuna
-possibilità di comunicare con quella persona è meglio non insistere. L'argomentare richiede molta
-energia, sia dal punto di vista emotivo, soprattutto quando l'argomento ci è caro, che da quello
-mentale, per cercare di costruire un discorso, mettere in luce i punti critici del nostro interlocutore, analizzandoli,
-fornendo esempi, provando altre strade comunicative e, questo richiede tempo, mentre per rispondere senza argomentare ci vuole
-un secondo, non servono prove, non serve logica, ragionamenti, studi ecc… Questo è molto logorante e deleterio per la
-persona, se vedete che non c'è possibilità di parlare, allora probabilmente non c'è nessuno
-scopo alla conversazione, che sia il fare cambiare idea, a lui o a noi o il semplice piacere del dibattito, quando non ci sono più i
-presupposti per continuare quello che resta è solo la frustrazione e la delusione. 
-Quando il dialogo si svuota di argomentazioni e si riduce all'imposizione di un punto di vista, si rischia di cadere in forme di prevaricazione comunicativa. Se non si cerca di persuadere l'interlocutore attraverso il ragionamento, si può involontariamente comunicare la pretesa che la propria parola sia vera per definizione, il che può essere percepito come una forma di autoritarismo. Il pretendere, senza un compromesso, senza uno scambio potrebbe essere già violenza, una prepotenza, anche se si tratta di parola. Questo è il terreno fertile per
-l'autoritarismo e il dogmatismo. Quindi allo stesso modo, quando ci troviamo in una ambiente, dove
-fiutiamo il dogmatismo, possiamo con pazienza, fare un grande lavoro di rimessa in discussione di tutto quanto. 
+Quando il dialogo si svuota di argomentazioni, si riduce all'imposizione di un punto di vista rischiando di cadere in forme di prevaricazione comunicativa. Se non si cerca di persuadere l'interlocutore attraverso il ragionamento, si può involontariamente comunicare la pretesa che la propria parola sia vera per definizione, il che può essere percepito come un modo autoritario e dogmatico di porsi. 
 
 Quando la critica diventa insulto? Il fatto che ci siamo sentiti offesi non è sufficiente a definire un insulto.
-L'insulto si differenzia dalla critica spesso per la volgarità e la mancanza di argomentazioni, è
-gratuito, senza motivazioni concrete e obiettive ed è personale. Detto questo, possiamo sentirci ugualmente offesi e feriti da una
-critica ben argomentata, soprattutto se ha un fondo di verità e ci tocca su qualcosa per noi molto importante. A quel
-punto è probabilmente un problema nostro e non dell'interlocutore, legittimo, naturale e forse ci capiterà sempre. 
-Anche usare il determinismo non è una buona argomentazione. Dire che in quel contesto del passato ad esempio era normale un determinato comportamento, mi può anche trovare d'accordo, ma allora anche oggi è così perché è normale così. Posso essere d'accordo che non esiste il dualismo e il libero arbitrio, ma allora tanto vale che andiamo al mare o a fare una passeggiata e non parliamone più.
+L'insulto si differenzia dalla critica spesso per la volgarità e la mancanza di argomentazioni, è gratuito e va sul personale. 
+Anche usare il determinismo non è una buona argomentazione. Dire che in quel contesto del passato ad esempio era normale un determinato comportamento, ma allora anche oggi è così perché è normale così. Posso anche essere d'accordo, ma allora tanto vale che andiamo a fare una passeggiata e non ne parliamo più.
 
 Quando sbagliamo è meglio ammettere il proprio errore ed eventualmente spiegare quali circostanze
-ci hanno portati a sbagliare, non nel tentativo di essere giustificati, ma per essere compresi. Se
-invece, diciamo: non dovevi dirmi questa cosa (ovvero farmi notare il mio errore) perché
-mi ha ferito, nel tentativo di combattere uno sbaglio con un altro sbaglio, forse inconsapevolmente, stiamo cercando di far insorgere sensi di colpa non dovuti, invece di premiare l'onestà dell'interlocutore. Questo è solo un esempio estremo, non c'è molta differenza ogni volta
-che non c'è argomentazione, ma si vuole avere ragione solo per il semplice fatto che ci sentiamo
-offesi. Non c'è una correlazione logica tra il come ci sentiamo e i fatti o la ragione.
+ci hanno portati a sbagliare, non nel tentativo di essere giustificati, ma per essere compresi.
 
-Qualcuno farà ricorso alla tua empatia, chiedendoti inconsapevolmente di non ragionare in modo pragmatico, ma di usare il cuore come lo stabilisce lui o lei. Se critichi qualcosa vieni definito qualcosa-fobico, invidioso, buonista. Anche qua, non siamo in presenza di argomentazioni, inutile dirlo, e allora la domanda da fare sarebbe: come posso essere critico argomentando qualcosa senza essere etichettati?
+Qualcuno farà ricorso alla tua empatia, chiedendoti inconsapevolmente di non ragionare in modo pragmatico, ma di usare il cuore come lo stabilisce lui o lei. Se critichi qualcosa vieni definito qualcosa-fobico, invidioso, buonista. Potremmo chiedere: In che altro modo mi sarei dovuto porre per esprimere il mio pensiero critico senza offenderti?
 
-L'offesa molto spesso è soggettiva, io mi posso offendere perché non ti piace il mio gruppo musicale preferito o la mia
-squadra del cuore e, la mia sofferenza può essere sincera, perché da piccolo ho avuto dei trascorsi che mi hanno
-portato a reagire in questo modo. Sono io quindi a stabilire quando e se sentirmi offeso. Se socialmente iniziamo a
-stabilire che la ragione la detiene chi si dichiara offeso, può diventare un problema, perché questa persona in modo
+L'offesa molto spesso è soggettiva, io mi posso offendere perché non ti piace il mio gruppo musicale preferito o la mia squadra del cuore e, la mia sofferenza può essere sincera. Se socialmente iniziamo ad accettare che la ragione la detiene chi si dichiara offeso, può diventare un problema, perché questa persona in modo
 arbitrario e autoritario potrà decidere cosa gli altri potranno fare o non fare, dire o non dire.
 
 Vediamo questo atteggiamento tra chi litiga sui social e non, ma anche quando si parla di linguaggio inclusivo. Il
@@ -3432,23 +3362,22 @@ Spesso chi è contrario a questa teoria porta alcuni esempi come: gli eschimesi 
 Allo stesso tempo, alcuni linguisti e psicologi sostengono che modifiche nel linguaggio inclusivo possono influenzare la percezione sociale e ridurre pregiudizi, sebbene non risolvano da sole atteggiamenti profondi. Il linguaggio e la realtà si influenzano reciprocamente in molti ambiti culturali e cognitivi.
 
 Se vogliamo fare una critica a una persona possiamo usare il “sandwich della critica”. Si tratta di mettere una critica
-all'interno di due fette di cose positive. Quindi, si inizia dicendo qualcosa di positivo che
-riguarda il nostro interlocutore, dopodiché si continua con la critica e si conclude con ancora con qualcosa di buono.
-Secondo Gennaro romagnoli però quest'ultimo passaggio andrebbe sostituito con un incoraggiamento. 
-Quando si introduce la critica, meglio evitare parole come “ma” o “però”, perché potrebbero invalidare la cosa
-positiva appena detta. Quando arriva il momento della critica, siate fermi e decisi, senza indorare la pillola,
-altrimenti si rischia di essere poco chiari e un po' fumosi; in fondo, i momenti per dire le cose
-positive e cercare di ferire il meno possibile il nostro interlocutore, già ci sono. Se non riesci proprio a trovare
-due pregi della persona che hai davanti, allora forse il problema sei tu; il rapporto si è troppo logorato e sei
-diventato troppo scarico.
+all'interno di due fette positive. Quindi, si inizia dicendo qualcosa di positivo sulla persona, dopodiché si continua con la critica e si conclude con ancora qualcosa di buono.
+Secondo Gennaro romagnoli però quest'ultimo passaggio andrebbe sostituito con un incoraggiamento. Se non riesci proprio a trovare
+due pregi della persona che hai davanti, allora forse il problema sei tu e il rapporto che si è troppo logorato.
 
-Le critiche sono importanti, se siamo troppo dentro a una cosa, difficilmente riusciremo ad auto valutarci. 
-Se qualcuno ci fa notare un nostro comportamento, è oro! Sarà capitato a tutti di esserci comportati
-in un certo modo in una situazione e, dall'esterno, qualcuno ci ha fatto notare lo sbaglio.
-All'inizio ci avrà fatto male, non sarà stato facile ammettere che avesse avuto ragione, ma una
-volta superata questa fase, siamo stati grati dell'onestà e del coraggio di questa persona, che avrebbe potuto scegliere la strada più facile e non dirci nulla.
-Dicendoci una cosa scomoda ha portato consapevolezza dei nostri atteggiamenti a cui presteremo più attenzione in
-futuro. Allo stesso modo, quando saremo noi a trovarci a dover fare una critica, non attacchiamo la persona, ma solo il
+Le critiche sono importanti, se siamo troppo dentro a una cosa, difficilmente riusciremo a valutarci. 
+Se qualcuno ci fa notare un nostro comportamento, è oro!
+All'inizio ci potrebbe fare male, ma una
+volta superata questa fase, possiamo essere grati dell'onestà e del coraggio di questa persona, che avrebbe potuto scegliere la strada più facile e non dirci nulla. 
+
+
+
+
+
+
+
+Allo stesso modo, quando saremo noi a trovarci a dover fare una critica, non attacchiamo la persona, ma solo il
 comportamento che vogliamo segnalare, in maniera oggettiva, senza commenti personali e il più circostanziato possibile,
 ad esempio: quella volta, in quella particolare occasione sei stato maleducato. Invece di dire: sei un maleducato. Se
 si ha una richiesta invece è meglio formala in positivo, ad esempio: vorrei che tu arrivassi in orario. Invece di: Non
